crates/fortitude/tests/snapshots/check__output_format_rdjson.snap
---
source: crates/fortitude/tests/check.rs
info:
  program: fortitude
  args:
    - check
    - "--output-format"
    - rdjson
    - "--select"
    - "S061,C001,PORT011,PORT021"
    - test.f90
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----
{
  "diagnostics": [
    {
      "code": {
        "url": "https://fortitude.readthedocs.io//en/stable/rules/implicit-typing",
        "value": "C001"
      },
      "severity": "ERROR",
      "location": {
        "path": "[TMP]/test.f90",
        "range": {
          "end": {
            "line": 2,
            "column": 1
          },
          "start": {
            "line": 1,
            "column": 1
          }
        }
      },
      "message": "program uses implicit typing",
      "suggestions": [
        {
          "range": {
            "end": {
              "line": 2,
              "column": 1
            },
            "start": {
              "line": 2,
              "column": 1
            }
          },
          "text": "  implicit none\n"
        }
      ]
    },
    {
      "code": {
        "url": "https://fortitude.readthedocs.io//en/stable/rules/star-kind",
        "value": "PORT021"
      },
      "severity": "ERROR",
      "location": {
        "path": "[TMP]/test.f90",
        "range": {
          "end": {
            "line": 2,
            "column": 12
          },
          "start": {
            "line": 2,
            "column": 10
          }
        }
      },
      "message": "'logical*4' uses non-standard syntax",
      "suggestions": [
        {
          "range": {
            "end": {
              "line": 2,
              "column": 12
            },
            "start": {
              "line": 2,
              "column": 3
            }
          },
          "text": "logical(4)"
        }
      ]
    },
    {
      "code": {
        "url": "https://fortitude.readthedocs.io//en/stable/rules/literal-kind",
        "value": "PORT011"
      },
      "severity": "ERROR",
      "location": {
        "path": "[TMP]/test.f90",
        "range": {
          "end": {
            "line": 2,
            "column": 12
          },
          "start": {
            "line": 2,
            "column": 11
          }
        }
      },
      "message": "logical kind set with number literal '4'"
    },
    {
      "code": {
        "url": "https://fortitude.readthedocs.io//en/stable/rules/unnamed-end-statement",
        "value": "S061"
      },
      "severity": "ERROR",
      "location": {
        "path": "[TMP]/test.f90",
        "range": {
          "end": {
            "line": 3,
            "column": 12
          },
          "start": {
            "line": 3,
            "column": 1
          }
        }
      },
      "message": "end statement should be named.",
      "suggestions": [
        {
          "range": {
            "end": {
              "line": 3,
              "column": 12
            },
            "start": {
              "line": 3,
              "column": 1
            }
          },
          "text": "end program test"
        }
      ]
    }
  ],
  "severity": "WARNING",
  "source": {
    "name": "fortitude",
    "url": "https://fortitude.readthedocs.io/"
  }
}
----- stderr -----
