crates/fortitude/tests/snapshots/check__output_format_rule_id_show_both_junit.snap
---
source: crates/fortitude/tests/check.rs
info:
  program: fortitude
  args:
    - check
    - "--output-format"
    - junit
    - "--preview"
    - "--select"
    - implicit-typing
    - test.f90
    - "--config"
    - "check.output-rule-id-format='both'"
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----
<?xml version="1.0" encoding="UTF-8"?>
<testsuites name="fortitude" tests="1" failures="1" errors="0">
    <testsuite name="[TMP]/test.f90" tests="1" disabled="0" errors="0" failures="1" package="org.plasmafair.fortitude">
        <testcase name="org.plasmafair.fortitude.implicit-typing" classname="[TMP]/test" line="1" column="1">
            <failure message="program uses implicit typing">line 1, col 1, program uses implicit typing</failure>
        </testcase>
    </testsuite>
</testsuites>

----- stderr -----
