crates/fortitude/tests/snapshots/check__output_format_rule_id_show_both_pylint.snap
---
source: crates/fortitude/tests/check.rs
info:
  program: fortitude
  args:
    - check
    - "--output-format"
    - pylint
    - "--preview"
    - "--select"
    - implicit-typing
    - test.f90
    - "--config"
    - "check.output-rule-id-format='both'"
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----
test.f90:1: [implicit-typing] program uses implicit typing

----- stderr -----
